fix: 🐛 cache update bug
BREAKING CHANGE: 🧨 yes

--- a/config.sample.json
+++ b/config.sample.json
@@ -28,6 +28,32 @@
         }
       }
     ],
+    "SB-DNS": [
+      {
+        "Name": "IPV4-1",
+        "Address": "185.222.222.222:53",
+        "Protocol": "udp",
+        "SOCKS5Address": "",
+        "Timeout": 6,
+        "EDNSClientSubnet": {
+          "Policy": "disable",
+          "ExternalIP": "",
+          "NoCookie": false
+        }
+      },
+      {
+        "Name": "IPV4-2",
+        "Address": "185.184.222.222:53",
+        "Protocol": "udp",
+        "SOCKS5Address": "",
+        "Timeout": 6,
+        "EDNSClientSubnet": {
+          "Policy": "disable",
+          "ExternalIP": "",
+          "NoCookie": false
+        }
+      }
+    ],
     "CN-DNS": [
       {
         "Name": "ChinaTelecom-CN",
@@ -65,6 +91,11 @@
       "IPNetworkFile": "",
       "DomainFile": "cn.domain",
       "Matcher": "suffix-tree"
+    },
+    "SB-DNS": {
+      "IPNetworkFile": "",
+      "DomainFile": "cn.domain",
+      "Matcher": "suffix-tree"
     }
   },
   "DefaultDNSBundle":"HK-DNS",
@@ -73,6 +104,8 @@
   "MinimumTTL": 0,
   "DomainTTLFile": "./domain_ttl_sample",
   "CacheSize": 1000,
+  "CacheCrontab":"*/5 * * * * ?",
+  "Dectector":"ping",
   "RejectQType": [
     255
   ]
