feat: 🎸 support match ip list
BREAKING CHANGE: 🧨 no

--- a/config.sample.json
+++ b/config.sample.json
@@ -88,7 +88,7 @@
       "Matcher": "suffix-tree"
     },
     "CN-DNS": {
-      "IPNetworkFile": "",
+      "IPNetworkFile": "cn.ip",
       "DomainFile": "cn.domain",
       "Matcher": "suffix-tree"
     },
